# k2000

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP-PR7-filter-validation-L3.md
.claude/skills/characterize-filter/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  drift.yml  release.yml
assets/textures/: SOURCES.txt
docs/: README.md
docs/architecture/: README.md  algorithm-taxonomy.md  antialiasing-adaa.md  dsp-block-interface.md  engine-questions.md  filter-dossiers-sem-moog.md  huggett-filter-dossier.md  huggett-filter.md  moog-ladder.md  nonlinear-filter-modeling.md  tpt-svf-core.md
docs/audit/2026-07-02/: 01-memory-safety.md  02-static-analysis.md  03-architecture.md  04-dependencies.md  05-doc-staleness.md  README.md
docs/decisions/: 0001-juce-framework.md  0002-polymorphic-dsp-slots.md  0003-windows-via-github-actions.md  0004-defer-photoreal-ui.md  0005-voice-layer-split.md  0006-algorithm-as-passive-data.md  0007-param-namespace-and-v1-preset-shim.md  0008-algorithm-selection-and-param-namespace.md  0009-multi-layer-program.md  0010-k2061-repositioning-constant-summit-spine.md  0011-selectable-spine-filter-library.md  0012-cmajor-coexistence-evaluation.md  README.md
docs/dsp/: README.md
docs/filter-validation/: README.md  acceptance-criterion.md  concepts.md  extending.md  interpreting-results.md  operating-points.md  running.md  troubleshooting.md
docs/franklin/: charter.md  dashboard.md  test-catalog.json
docs/handoffs/: 2026-06-20-session-handoff.md  2026-07-03-session-handoff.md  2026-07-08-session-handoff.md  2026-07-11-session-handoff.md
docs/plans/: 2026-05-25-v1-implementation.md  2026-06-12-v2-layer-abstraction-implementation.md  2026-06-14-v3-algorithm-abstraction-implementation.md  2026-06-15-v4-multi-layer-programs-implementation.md  README.md
docs/reviews/: 2026-07-02-fit-for-purpose-review.md  2026-07-02-huggett-large-signal-read.md  REVIEW-PR7-filter-validation.md
docs/roadmap/: README.md  phases.md  v2-known-concerns.md  v4-known-concerns.md
docs/specs/: 2026-05-25-v1-skeleton-design.md  2026-06-11-v2-layer-abstraction-design.md  2026-06-14-v3-algorithm-abstraction-design.md  2026-06-15-v4-multi-layer-programs-design.md  2026-06-16-v4.5-b-summit-ui-foundation-design.md  2026-06-16-v4.5-k2061-repositioning-design.md  2026-06-16-v5-constant-summit-voice-design.md  2026-06-17-v5-huggett-nonlinear-hp-prefilter-design.md  2026-06-20-huggett-separation-design.md  2026-06-20-moog-ladder-design.md  2026-06-20-test-harness-design.md  README.md
docs/superpowers/plans/: 2026-06-15-v4.5-b-summit-ui-foundation.md  2026-06-16-v5-spine-filter-foundation.md  2026-06-17-v5-huggett-nonlinear-hp-prefilter.md  2026-06-20-roadmap-dashboard.md  2026-06-20-test-harness.md  2026-06-20-v5.2-huggett-separation.md  2026-06-21-cmajor-nonlinear-spike.md  2026-06-21-cmajor-spike.md  2026-06-21-safety-limiter.md  2026-06-22-moog-cmajor-dsp.md  2026-06-22-spine-model-hotswap.md  2026-06-23-filter-characterization-harness.md  2026-06-23-moog-spec2-go-live.md  2026-06-26-oversampling.md  2026-06-29-filter-validation-internal.md  2026-07-01-device-char-core-m1-socket.md  2026-07-01-device-char-core-m2-level-trust.md  2026-07-01-device-char-core-m3-schema-gates.md  2026-07-02-anti-drift-harness.md  (+7 more)
src/: Layer.cpp  Layer.h  LayerRouting.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Program.cpp  Program.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
src/dsp/: Algorithm.h  AlgorithmLibrary.cpp  AlgorithmLibrary.h  DSPBlock.h  Envelope.cpp  Envelope.h  Halfband2x.h  Oscillator.cpp  Oscillator.h  ParamSnapshot.h  ParamSpec.h  SafetyLimiter.h  VoiceOversampler.h
src/gui/: LabeledFader.cpp  LabeledFader.h  LabeledKnob.cpp  LabeledKnob.h  ParamBinder.cpp  ParamBinder.h  Section.cpp  Section.h  SummitLookAndFeel.cpp  SummitLookAndFeel.h  ValueFormat.cpp  ValueFormat.h  VcoRow.cpp  VcoRow.h  VintageLookAndFeel.cpp  VintageLookAndFeel.h
src/params/: Config.h  ParamSnapshot.h  Parameters.cpp  Parameters.h
src/util/: Utf8.h
tests/: AWeightingTests.cpp  AlgorithmNameTests.cpp  AlgorithmRoutingTests.cpp  AlgorithmTests.cpp  AliasSplitTests.cpp  AsymDriveEquivalenceTests.cpp  CMakeLists.txt  CaptureCalTests.cpp  CharacterizationGateTests.cpp  CharacterizationRunnerTests.cpp  CmajorFilterModelTests.cpp  CmajorSvfAdapterTests.cpp  CmajorSvfEquivalenceTests.cpp  CmajorSvfPerfTests.cpp  DeviceUnderTestTests.cpp  EnvelopeTests.cpp  FilterModelLibraryTests.cpp  FilterUnderTestTests.cpp  GeneratorPathTests.cpp  GridShapeTests.cpp  Halfband2xTests.cpp  HpPreFilterTests.cpp  HuggettBoundedResonanceTests.cpp  HuggettDriveOnsetTests.cpp  HuggettNonlinearTests.cpp  HuggettSeparationClickTests.cpp  HuggettSeparationTests.cpp  InPlaceStateTests.cpp  LargeSignalTests.cpp  LayerRoutingTests.cpp  LayerTests.cpp  LevelDisparityTests.cpp  LevelResponseTests.cpp  MethodAgreementTests.cpp  ModelHotSwapTests.cpp  MoogLadderTests.cpp  MoogMaxFreqTests.cpp  MoogPipelineTests.cpp  MultiLayerTests.cpp  NlSvfEquivalenceTests.cpp  (+32 more)
tests/characterization/: CharacterizationRunner.cpp  CharacterizationRunner.h  DeviceUnderTest.h  FilterUnderTest.cpp  FilterUnderTest.h  OperatingPoint.h  ReferenceDevices.h  characterize_main.cpp
tests/fixtures/: CountingFilterModel.h  SpineDcBlockerHarnessTests.cpp  SpineHpStageHarnessTests.cpp  SpineHuggettHarnessTests.cpp  SpineNlSvfHarnessTests.cpp  SpineShaperHarnessTests.cpp
tests/golden/: shaper_thd.csv
tests/golden/fingerprints/: baseline.csv
tests/golden/huggett/: baseline.csv
tests/golden/moog/: README.md  baseline.csv
tests/testdsp/: AWeighting.h  CaptureCal.h  EssResponse.h  Gate.h  GoldenIO.h  Harmonics.h  Level.h  LevelResponse.h  MethodAgreement.h  Metrics.h  ProcessAdapter.h  Reference.h  Response.h  RunLog.cpp  RunLog.h  SignalGen.h  Spectrum.h  SteppedSine.h  Sweep.h  TransferFunction.h
tools/: drift-check
tools/cmajor/: cmaj-codegen.sh
tools/roadmap-dashboard/: README.md  index.html  package-lock.json  package.json  roadmap.json  tsconfig.json
(+100 files in other folders)
